Bug 257688 - Fix !ENABLE(ACCESSIBILITY) build following 264852@main
Summary: Fix !ENABLE(ACCESSIBILITY) build following 264852@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-04 05:11 PDT by Ross Kirsling
Modified: 2023-06-04 05:19 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2023-06-04 05:11:41 PDT
.
Comment 1 Ross Kirsling 2023-06-04 05:12:32 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14656
Comment 2 EWS 2023-06-04 05:18:22 PDT
Committed 264855@main (0dfd18e6886a): <https://commits.webkit.org/264855@main>

Reviewed commits have been landed. Closing PR #14656 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-06-04 05:19:18 PDT
<rdar://problem/110227945>