Fix !ENABLE(ACCESSIBILITY) build following 264852@main https://bugs.webkit.org/show_bug.cgi?id=257688

Unreviewed build fix.

* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::onPopoverTargetToggle):
Add missing stub.

Canonical link: https://commits.webkit.org/264855@main